# PipeAudit

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
src/ch/: client.rs  mod.rs
src/collectors/: disk.rs  evidence.rs  merges.rs  mod.rs  mutations.rs  mv_dag.rs  parts.rs  query_log.rs
src/output/: json.rs  mod.rs  summary.rs
src/report/: builder.rs  mod.rs  types.rs
src/rules/: context.rs  disk.rs  engine.rs  merges.rs  mod.rs  mutations.rs  parts.rs  query.rs
tests/: integration_test.rs
tests/fixtures/: init.sql
