[package]
name = "pipeaudit"
version = "0.1.0"
edition = "2021"
description = "Audit tool for ClickHouse data pipelines"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clickhouse = { version = "0.13", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
